Slight footer readability update.

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
     </article>
     <footer>
       <div class="container text-center">
-        <p>&copy; 2015 - Present All Rights Reserved. Snow Day Enterprises, LLC. PO Box 272657 Fort Collins, CO 80527</p>
+        <p>&copy; 2015 - Present. All Rights Reserved. Snow Day Enterprises, LLC. PO Box 272657 Fort Collins, CO 80527</p>
       </div>
     </footer>
   </body>
